@@ -26,8 +26,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Person-ID-CZ-RC-Generator';
-resources 'homepage' => 'https://github.com/tupinek/Person-ID-CZ-RC-Generator';
-resources 'repository' => 'git://github.com/tupinek/Person-ID-CZ-RC-Generator';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Person-ID-CZ-RC-Generator';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Person-ID-CZ-RC-Generator';
 test_requires 'English' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
