@@ -1,6 +1,7 @@
 0.06
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
 
 0.05 2015-09-28T17:56:18+02:00
  - Improve LICENSE AND COPYRIGHT section in doc.
